<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dateroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="toTop">Topへ</string>
    <string name="GuruNavi">ぐるなび</string>
    <string name="KeyWord">キーワード</string>

    <string name="gurunavi_key">0e2db4869d397cac782d81f1717c3759</string>
	<string name="gurunavi_authority">api.gnavi.co.jp</string>
	<string name="gurunavi_path_restaurant">/ver1/RestSearchAPI/</string>
	<string name="gurunavi_path_area">/ver1/AreaSearchAPI/</string>
	<string name="gurunavi_path_pref">/ver1/PrefSearchAPI/</string>
	<string name="gurunavi_path_largecategory">/ver1/CategoryLargeSearchAPI/</string>
	<string name="gurunavi_path_smallcategory">/ver1/CategorySmallSearchAPI</string>
	
	<string name="twitter_consumer_key">Fse5VyKi9heKbQQ6VpEcnQ</string>
	<string name="twitter_consumer_secret">YIuZ2OIAVyE4htXM5t3E9t7uGFKfSN65vo9F60xSw8</string>
	<string name="twitter_callback_url">dateroid://twitter</string>
	
	<string name="facebook_app_id">172891579580836</string>
	<string name="facebook_app_secret">18c42a08c867afea7ea1baa7dfd9bc75</string>
	
	<!-- 警告メッセージ -->
	<string name="noTel">該当する電話番号がありません</string>
	
	<!-- デートプラン条件設定 -->
	<string name="create_title">作成方法</string>
    <string name="plan_title">プラン指定</string>
    <string name="area_title">地域指定</string>
    <string name="shared_title">おすすめ</string>
    
    <!-- プラン編集 -->
    <string name="plan_edit_title">プラン編集</string>
    
    <!-- 共有 -->
    <string name="select_title">デートプランを選んでください</string>
	
	<!-- 日記  -->
	<string name="require_title">タイトルをいれてね！</string>
    <string name="diary_content">今日の感想を書いてね！</string>
    <string name="select_photos">写真を選んでね!!\n（最高で4枚まで選べるよ）</string>

	
    <!-- 履歴 -->
    <string name="favoriteDatePlan">お気に入りデートプラン</string>
    <string name="dateHistory">履歴</string>
    <string name="favoriteDateSpot">お気に入りデートスポット</string>
    
    <!-- お気に入り登録 -->
	<string name="favoriteRegister_title">登録</string>
    <string name="favoriteRegister_requireTitle">タイトルを入力してください</string>
	<string name="favoriteRegister_requireComment">一言どうぞ</string>
    
    <!-- スポット詳細 -->
    <string name="spotDetail_title">スポット詳細</string>
    
    <!-- ダイアログメッセージ -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save_favorite_spot_title">お気に入りスポット</string>
    <string name="save_favorite_spot_message">お気に入りスポットに登録しますか？</string>
    <string name="save_diary_title">日記の保存</string>
    <string name="save_diary_message">日記を保存しますか？</string>
   	<string name="save_date_plan_title">デートプランの保存</string>
   	<string name="save_date_plan_message">デートプランを保存しますか？</string>
   	<string name="select_block_title">新規作成</string>
   	<string name="select_block_spot">デートスポット</string>
   	<string name="select_block_restaurant">レストラン</string>
   	<string name="select_block_free">フリー</string>
   	<string name="select_block_cancel">キャンセル</string>
    
</resources>
