<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/toHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="toHome"
            android:src="@drawable/ic_launcher" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="edit"
            android:src="@drawable/ic_launcher" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="save"
            android:src="@drawable/ic_launcher" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="share"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/require_title" />
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="4">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:text="@string/select_photos"/>
        <android.support.v4.view.ViewPager
	        android:id="@+id/pager"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"/>
	</RelativeLayout>
    

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/diary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/diary_content" />

</LinearLayout>